hard-gists/ac5987161bc27048e1da48e40299468b/run.log
=== Docker Run Log for ac5987161bc27048e1da48e40299468b ===
Started at: Mi 29. Okt 19:13:00 CET 2025

[2025-10-29 19:13:01] START: Running container for ac5987161bc27048e1da48e40299468b
[2025-10-29 19:13:01] SUCCESS: Container 804bea31819bbac58d1cae822831cd3aee747a015aa2fc240637cb39f32d47c8 started for ac5987161bc27048e1da48e40299468b
=== Container logs for ac5987161bc27048e1da48e40299468b ===
  File "/snippet.py", line 194
    print "Usage: %s <color file> <bw file> <text file> <json file>" % \
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for ac5987161bc27048e1da48e40299468b ===
[2025-10-29 19:13:03] INFO: Container 804bea31819bbac58d1cae822831cd3aee747a015aa2fc240637cb39f32d47c8 has stopped
